# meetscribe

./: .claude.local.md  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-06-meetscribe.md  2026-04-15-speaker-mapping.md  2026-04-15-word-level-diarization.md  2026-04-16-pyannote-diarization.md  2026-04-17-audio-playback.md
docs/superpowers/specs/: 2026-04-06-meetscribe-design.md  2026-04-15-speaker-mapping-design.md  2026-04-15-word-level-diarization-design.md  2026-04-16-pyannote-diarization-design.md  2026-04-17-audio-playback-design.md
src/meetscribe/: __init__.py  __main__.py  config.py  importer.py
src/meetscribe/audio/: player.py  recorder.py
src/meetscribe/storage/: speakers.py  vault.py
src/meetscribe/summarization/: provider.py
src/meetscribe/templates/: engine.py
src/meetscribe/transcription/: diarize.py  whisper.py
src/meetscribe/tui/: __init__.py  app.py
src/meetscribe/tui/screens/: bulk_dialog.py  dialogs.py  home.py  meeting.py  recording.py  settings.py  setup.py
src/meetscribe/tui/widgets/: clickable_richlog.py
templates/: 1on1.md  brainstorming.md  default.md  project_kickoff.md  retrospective.md  sprint_planning.md  standup.md
tests/: test_config.py  test_diarize_embeddings.py  test_integration.py  test_player.py  test_recorder.py  test_speakers.py  test_summarization.py  test_templates.py  test_transcript_rewrite.py  test_vault.py  test_whisper.py
